--- a/ansible/roles/ntp-client/templates/ntp.conf.j2
+++ b/ansible/roles/ntp-client/templates/ntp.conf.j2
@@ -1,6 +1,6 @@
 {{ file_header | default () }}
 # Servers
-{% for item in ntp_servers %}
+{% for item in ntp_client_servers %}
 server {{ item.address }} {{ item.options |default() }}
 {% endfor %}
 
