--- a/ansible/roles/mgrote.dnsmasq/templates/dnsmasq.conf.j2
+++ b/ansible/roles/mgrote.dnsmasq/templates/dnsmasq.conf.j2
@@ -1,3 +1,4 @@
+{{ file_header }}
 # Configuration file for dnsmasq.
 #
 # Format is one option per line, legal options are the same
@@ -7,7 +8,7 @@
 # Listen on this specific port instead of the standard DNS port
 # (53). Setting this to zero completely disables DNS function,
 # leaving only DHCP and/or TFTP.
-#port=5353
+port={{ dnsmasq_listen_port | default(53) }}
 
 # The following two options make you a better netizen, since they
 # tell dnsmasq to filter out queries which the public DNS cannot
@@ -16,9 +17,9 @@
 # these requests from bringing up the link unnecessarily.
 
 # Never forward plain names (without a dot or domain part)
-#domain-needed
+domain-needed
 # Never forward addresses in the non-routed address spaces.
-#bogus-priv
+bogus-priv
 
 # Uncomment these to enable DNSSEC validation and caching:
 # (Requires dnsmasq to be built with DNSSEC option.)
@@ -43,7 +44,7 @@
 
 # Change this line if you want dns to get its upstream servers from
 # somewhere other that /etc/resolv.conf
-#resolv-file=
+resolv-file={{ dnsmasq_resolv_file | default(/etc/resolv.conf) }}
 
 # By  default,  dnsmasq  will  send queries to any of the upstream
 # servers it knows about and tries to favour servers to are  known
@@ -71,7 +72,7 @@
 
 # Add local-only domains here, queries in these domains are answered
 # from /etc/hosts or DHCP only.
-#local=/localnet/
+local=/{{ dnsmasq_domain | default() }}/
 
 # Add domains which you want to force to an IP address here.
 # The example below send any host in double-click.net to a local
@@ -128,11 +129,11 @@
 #no-hosts
 # or if you want it to read another file, as well as /etc/hosts, use
 # this.
-#addn-hosts=/etc/banner_add_hosts
+addn-hosts={{ dnsmasq_extra_resolve_file | default() }}
 
 # Set this (and domain: see below) if you want to have a domain
 # automatically added to simple names in a hosts-file.
-#expand-hosts
+expand-hosts
 
 # Set the domain for dnsmasq. this is optional, but if it is set, it
 # does the following things.
@@ -141,7 +142,7 @@
 # 2) Sets the "domain" DHCP option thereby potentially setting the
 #    domain of all systems configured by DHCP
 # 3) Provides the domain part for "expand-hosts"
-#domain=thekelleys.org.uk
+domain={{ dnsmasq_domain | default()  }}
 
 # Set a different domain for a particular subnet
 #domain=wireless.thekelleys.org.uk,192.168.2.0/24
@@ -154,7 +155,9 @@
 # a lease time. If you have more than one network, you will need to
 # repeat this for each network on which you want to supply DHCP
 # service.
-#dhcp-range=192.168.0.50,192.168.0.150,12h
+{% for item in dnsmasq_dhcp_pools %}
+dhcp-range={{ item.ip_start }},{{ item.ip_end }},{{ item.leasetime }}
+{% endfor %}
 
 # This is an example of a DHCP range where the netmask is given. This
 # is needed for networks we reach the dnsmasq DHCP server via a relay
@@ -225,7 +228,9 @@
 
 # Always allocate the host with Ethernet address 11:22:33:44:55:66
 # The IP address 192.168.0.60
-#dhcp-host=11:22:33:44:55:66,192.168.0.60
+{% for item in dnsmasq_dhcp_static_leases %}
+dhcp-host={{ item.mac }},{{ item.hostname }}{{ item.ip }}
+{% endfor %}
 
 # Always set the name of the host with hardware address
 # 11:22:33:44:55:66 to be "fred"
@@ -325,6 +330,12 @@
 # any dhcp-options. If you use Windows clients and Samba, there
 # are some options which are recommended, they are detailed at the
 # end of this section.
+#------
+{% for item in dnsmasq_dhcp_static_leases %}
+#{{ item.name }}
+dhcp-option={{ item.opt_nr }},{{ item.value }}
+#------
+{% endfor %}
 
 # Override the default route supplied by dnsmasq, which assumes the
 # router is the same machine as the one running dnsmasq.
@@ -530,7 +541,7 @@
 #dhcp-boot=/var/ftpd/pxelinux.0,boothost,tftp_server_name
 
 # Set the limit on DHCP leases, the default is 150
-#dhcp-lease-max=150
+dhcp-lease-max={{ dnsmasq_max_leases | default(150) }}
 
 # The DHCP server needs somewhere on disk to keep its lease database.
 # This defaults to a sane location, but if you want to change it, use
