--- a/ansible/roles/mgrote.dnsmasq/templates/resolv.conf.j2
+++ b/ansible/roles/mgrote.dnsmasq/templates/resolv.conf.j2
@@ -1,1 +1,5 @@
-nameserver {{ dnsmasq_external_nameserver }}
+{{ file_header }}
+
+{% for item in dnsmasq_external_nameserver %}
+nameserver {{ item.address }}
+{% endfor %}
